Add Tests
Signed-off-by: Naveen Tatikonda <navtat@amazon.com>